<resources>
    <string name="app_name">AndroidsLab</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\’m a button!</string>
    <string name="EnterEmail">Enter your email address:</string>
    <string name="TypeEmail">Type email here</string>
    <string name="TypePassword">Type your password:</string>
    <string name="Login">LOGIN</string>
    <string name="UserProfile">Your profile</string>
    <string name="UserName">Your name:</string>
    <string name="EnterName">Enter your name</string>
    <string name="UserEmail">Your email:</string>
    <string name="EnterEmail2">Enter your email</string>
    <string name="UserPicture">Your picture:</string>
    <string name="CameraButton">Click the button above to take a picture</string>
    <string name="goToChatButton">Go to chat</string>
    <string name="message">type here!</string>
    <string name="receiveButton">RECEIVE</string>
    <string name="sendButton">SEND</string>
    <string name="goToWeather">Check Weather</string>
    <string name="currentTemp">Current Temperature:</string>
    <string name="maxTemp">Max Temperature:</string>
    <string name="minTemp">Min Temperature:</string>
    <string name="uvRating">UV Rating:</string>
    <string name="goToToolbar">Go to Toolbar page</string>
    <string name="item1">Item 1</string>
    <string name="item2">Item 2</string>
    <string name="item3">Item 3</string>
    <string name="item14">Item 4</string>
    <string name="newMessage">What is your new message?</string>
    <string name="typeHere">Type here</string>

    <string name="messageText">Message: </string>
    <string name="id">Id: </string>
    <string name="type">Type: </string>
    <string name="delete">Delete</string>
    <string name="position">Position: </string>

</resources>
