<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLocation"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/messageTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/messageText" />

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/messageIdTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/id" />

        <TextView
            android:id="@+id/messageId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/messageTypeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/type" />

        <TextView
            android:id="@+id/messageType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/type"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/messagePositionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/position" />

        <TextView
            android:id="@+id/messagePosition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2" />

    </LinearLayout>


    <Button
        android:id="@+id/deleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/delete" />
</RelativeLayout>